; ModuleID = '/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_item_clear_wordlist.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/search/extr_search-data.c_item_clear_wordlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree = type { i32, %struct.tree* }

@Root = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.tree**)* @item_clear_wordlist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @item_clear_wordlist(i32* %0, %struct.tree** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.tree**, align 8
  %5 = alloca %struct.tree*, align 8
  %6 = alloca %struct.tree*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.tree** %1, %struct.tree*** %4, align 8
  %7 = load %struct.tree**, %struct.tree*** %4, align 8
  %8 = icmp eq %struct.tree** %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  br label %29

10:                                               ; preds = %2
  %11 = load %struct.tree**, %struct.tree*** %4, align 8
  %12 = load %struct.tree*, %struct.tree** %11, align 8
  store %struct.tree* %12, %struct.tree** %5, align 8
  br label %13

13:                                               ; preds = %16, %10
  %14 = load %struct.tree*, %struct.tree** %5, align 8
  %15 = icmp ne %struct.tree* %14, null
  br i1 %15, label %16, label %27

16:                                               ; preds = %13
  %17 = load %struct.tree*, %struct.tree** %5, align 8
  %18 = getelementptr inbounds %struct.tree, %struct.tree* %17, i32 0, i32 1
  %19 = load %struct.tree*, %struct.tree** %18, align 8
  store %struct.tree* %19, %struct.tree** %6, align 8
  %20 = load i32, i32* @Root, align 4
  %21 = load %struct.tree*, %struct.tree** %5, align 8
  %22 = getelementptr inbounds %struct.tree, %struct.tree* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32*, i32** %3, align 8
  %25 = call i32 @tree_delete(i32 %20, i32 %23, i32* %24)
  store i32 %25, i32* @Root, align 4
  %26 = load %struct.tree*, %struct.tree** %6, align 8
  store %struct.tree* %26, %struct.tree** %5, align 8
  br label %13

27:                                               ; preds = %13
  %28 = load %struct.tree**, %struct.tree*** %4, align 8
  store %struct.tree* null, %struct.tree** %28, align 8
  br label %29

29:                                               ; preds = %27, %9
  ret void
}

declare dso_local i32 @tree_delete(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
